--- a/main.css
+++ b/main.css
@@ -1,1 +1,16 @@
-font-family: "Comic Sans MS", "Comic Sans", cursive;
+p {
+	font-family: "Comic Sans MS", cursive, sans-serif;
+	color: white;
+}
+h1 {
+	font-family: "Comic Sans MS", cursive, sans-serif;
+	color: white;
+}
+h2 {
+	font-family: "Comic Sans MS", cursive, sans-serif;
+	color: white;
+}
+3 {
+	font-family: "Comic Sans MS", cursive, sans-serif;
+	color: white;
+}
