--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ h2 {
 	font-family: "Comic Sans MS", cursive, sans-serif;
 	color: white;
 }
-3 {
+h3 {
 	font-family: "Comic Sans MS", cursive, sans-serif;
 	color: white;
 }
