--- a/main.css
+++ b/main.css
@@ -14,3 +14,7 @@ h3 {
 	font-family: "Comic Sans MS", cursive, sans-serif;
 	color: white;
 }
+p {
+	font-family: "Comic Sans MS", cursive, sans-serif;
+	color: white;
+}
