--- a/main.css
+++ b/main.css
@@ -11,15 +11,15 @@
 	font-size: 45px;
 }
 .center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
 }
 body {
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center top;
 }
 p {
 	font-family: "Comic Sans MS", cursive, sans-serif;
