--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@
 	width: 50%;
 }
 body {
-	background-size: contain;
+	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center top;
 }
